# parallel-fft

./: cube_fill.hpp  fftw-cube.cpp  meson.build  pfft-cube.cpp  readme.md
